# vdf

./: .gitmodules  Cargo.toml  inverse.sage
benches/: numbers.rs
estimator/: experiments.ipynb
reports/: AIII.out  AL.out  AM.out  AXL.out  BI.out  BII.out  BIII.out  CL.out  CM.out  CS.out
src/: arithmetic.rs  crs.rs  helpers.rs  main.rs  poly_arithmetic_i128.rs  protocol.rs  ring_helpers.rs  ring_i128.rs  root_of_unity.rs  static.rs  vdf.rs
src/static_rings/: mod.rs  static_generated.rs  static_generated_24.rs  static_generated_323.rs  static_generated_992.rs
src/subroutines/: bdecomp.rs  convolution.rs  fold.rs  mod.rs  norm_first_round.rs  norm_second_round.rs  split.rs  verifier.rs
